--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
     "content_scripts": [
         {
             "matches": ["https://www.youtube.com/watch?v=*"],
-            "js": ["content.js"]
+            "js": ["content.js", "background.js"],
+            "css": ["style.css"]
         }
     ]
 }
